app/public/css/main.css
@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:400|Josefin+Sans';

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

a{
	text-decoration: none;
	color: #0091EA;
}

html,body{
	background-color: #0288D1;
	font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
	font-size: 16px;
    overflow-x: hidden;
    visibility: hidden;
}

header{
    position: relative;;
    width: 100%;
    height: 35px;
    color: #fff;
    font-family: 'Source Sans Pro', sans-serif;
    padding-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.header-text{
	float: left;
	font-size: 2em;
	line-height: 1em;
}

.offline-text{
	font-size: 0.4em;
	visibility: hidden;
}

.events-remaining{
	float:right;
	margin-right: 5%;
    margin-top: 30px;
}

.events-remaining-text, .events-remaining-value{
	font-size: 0.8em;
	visibility: hidden;
}

#volumeSlider{
    cursor:pointer;
    position: absolute;
    top: 30px;
    right: 40px;
    width: 100px;
    opacity: 0.3;
    border-radius: 5px;
}

#volumeSlider:hover{
    cursor:pointer;
    opacity: 0.9;
}

#area{
	width: 100%;
	position: relative;
	/*height: calc(100vh - 70px);*/
}

circle {
    fill-opacity: 0.8;
}

.label {
    font: 1.0em 'Source Sans Pro', sans-serif;
    text-shadow:1px 1px 0 rgb(28, 39, 51),
    -1px -1px 0 rgb(28, 39, 51),
    1px -1px 0 rgb(28, 39, 51),
    -1px 1px 0 rgb(28, 39, 51),
    0px 1px 0 rgb(28, 39, 51),
    1px 0px 0 rgb(28, 39, 51),
    0px -1px 0 rgb(28, 39, 51),
    -1px 0px 0 rgb(28, 39, 51);
}

.online-users-div{
	text-align: center;
	position: absolute;
	bottom: 60px;
	width: 100%;
	margin: 0 auto;
    font-size: 0.9em;
	z-index: 1;
    opacity: 0.5;
    visibility: hidden;
}

.online-users-text{
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 1em;
	color: #E0E0E0;
}

#config-area{
    width: 100%;
    background: #FFFFFF;
    min-height: 300px;
    padding: 40px;
    color: #555555;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 300;
}

#org-repo-filter-div{
    width: 50%;
    margin: 0 auto;
    margin-bottom: 0px;
}

#org-repo-filter-name{
    width: 20%;
    color: gray;
    padding: 5px;
    padding-left: 10px;
    border: none;
    background: #F1F1F1;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 1em;
}

.site-description{
    font-size: 1em;
    line-height: 1.6em;
    width: 50%;
    margin: 0 auto;
    margin-top: 50px;
}

footer{
	width: 100%;
	height: 200px;
	padding: 20px;
	background-color: #242729;
	color: #9FA6AD;
	margin-top: -5px;
	position: relative;
	font-size: 0.9em;
}

.footer-left-text-block{
    float:left;
    line-height:1.3em;
}

.footer-right-text-block{
    float:right;
    margin-right:2%;
    text-align:right;
    line-height:1.3em;
}

.social-buttons{
	position: absolute;
	bottom:20px;
	right:60px;
	z-index: 2;
}


@media only screen and (max-device-width: 480px) {

    #config-area{
        padding: 0px;
        padding-top: 50px;
        min-height: 600px;
    }

    .site-description{
        font-size: 1em;
        line-height: 1.6em;
        width: 50%;
        margin: 0 auto;
    }

    .footer-left-text-block{
        width: 100%;
        margin: 0 auto;
        line-height:1.3em;
    }

    .footer-right-text-block{
        width: 100%;
        margin-left: 0 auto;
        line-height:1.3em;
        float: left;
        text-align: left;
        margin-top: 20px;
    }

    .online-users-div{
        margin-left: 20px;
        text-align: left;
    }

    .social-buttons{

    }

}

